# nOracle

./: .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  build.Dockerfile  config.example.yaml  go.mod  go.sum
.github/workflows/: build.yaml
cmd/: BUILD.bazel  main.go
internal/oracle/: BUILD.bazel  init.go
internal/route/info/: BUILD.bazel  handler.go  handler_test.go
internal/route/ticker/: BUILD.bazel  calculation.go  calculation_test.go  handler.go  handler_test.go  store.go
pkg/config/: BUILD.bazel  exchange.go  loader.go
pkg/connector/: BUILD.bazel  types.go
pkg/connector/binance/: BUILD.bazel  connector.go  types.go
pkg/connector/bybit/: BUILD.bazel  connector.go  types.go
pkg/connector/coinbase/: BUILD.bazel  connector.go  types.go
pkg/connector/okx/: BUILD.bazel  connector.go  types.go
pkg/connector/upbit/: BUILD.bazel  connector.go  types.go
pkg/storage/: BUILD.bazel  memory.go  memory_test.go  types.go
pkg/utils/env/: BUILD.bazel  var.go  var_test.go
pkg/utils/ticker/: BUILD.bazel  coinbase.go  coinbase_test.go  okx.go  okx_test.go  shared.go  upbit.go  upbit_test.go
