"""nOracle module for price oracle functionality."""

module(
    name = "noracle",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.54.0")
bazel_dep(name = "gazelle", version = "0.43.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_adshao_go_binance_v2", "com_github_bybit_exchange_bybit_go_api", "com_github_gin_gonic_gin", "com_github_stretchr_testify", "in_gopkg_yaml_v3")
