load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/nbitslabs/nOracle/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/oracle",
        "//pkg/connector",
        "//pkg/utils/env",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
