load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/nbitslabs/nOracle/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/oracle",
        "//internal/route/info",
        "//internal/route/ticker",
        "//pkg/connector",
        "//pkg/storage",
        "//pkg/utils/env",
        "@com_github_gin_gonic_gin//:gin",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
