load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = [
        "exchange.go",
        "loader.go",
    ],
    importpath = "github.com/nbitslabs/nOracle/pkg/config",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/connector",
        "//pkg/connector/binance",
        "//pkg/connector/bybit",
        "//pkg/connector/coinbase",
        "//pkg/connector/okx",
        "//pkg/connector/upbit",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)
