load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "info",
    srcs = ["handler.go"],
    importpath = "github.com/nbitslabs/nOracle/internal/route/info",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/oracle",
        "@com_github_gin_gonic_gin//:gin",
    ],
)

go_test(
    name = "info_test",
    srcs = ["handler_test.go"],
    embed = [":info"],
    deps = [
        "//internal/oracle",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_stretchr_testify//assert",
    ],
)
