load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "binance",
    srcs = [
        "connector.go",
        "types.go",
    ],
    importpath = "github.com/nbitslabs/nOracle/pkg/connector/binance",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/connector",
        "@com_github_recws_org_recws//:recws",
    ],
)
