load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "bybit",
    srcs = [
        "connector.go",
        "types.go",
    ],
    importpath = "github.com/nbitslabs/nOracle/pkg/connector/bybit",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/connector",
        "@com_github_bybit_exchange_bybit_go_api//:bybit_go_api",
    ],
)
