load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "upbit",
    srcs = [
        "connector.go",
        "types.go",
    ],
    importpath = "github.com/nbitslabs/nOracle/pkg/connector/upbit",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/connector",
        "//pkg/utils/ticker",
        "@com_github_google_uuid//:uuid",
        "@com_github_recws_org_recws//:recws",
    ],
)
